--- a/src/components/privacy/privacy.scss
+++ b/src/components/privacy/privacy.scss
@@ -1,1 +1,12 @@
 @import "../../global.scss";
+#privacy{
+  h1{
+    padding-top: calc(45px + 2rem);
+    text-align: center;
+  }
+  @include mobile{
+    h1{
+      padding-top: calc(45px + 1rem);
+    }
+  }
+}
