--- a/src/components/menuItem/menuitem.scss
+++ b/src/components/menuItem/menuitem.scss
@@ -206,6 +206,14 @@ overflow: hidden;
         padding:  7px 0;
         width: 100%;
         text-align: center;
+
+        &.hoverable:hover{
+          font-weight: bold;
+          cursor: pointer;
+        }
+        a{
+          color: inherit;
+        }
       }
     }
     &.active{
