--- a/src/components/menuItem/menuitem.scss
+++ b/src/components/menuItem/menuitem.scss
@@ -262,6 +262,7 @@ overflow: hidden;
                    transform: unset;
           height: auto;
           border-radius: 20px;
+          width: inherit;
         }
 
         li {
