--- a/src/components/bePart/bepart.scss
+++ b/src/components/bePart/bepart.scss
@@ -6,10 +6,12 @@
   h1{
     padding-top: calc(45px + 2rem);
     text-align: center;
+
   }
   @include mobile{
     h1{
       padding-top: calc(45px + 1rem);
+      margin: 0 0.5rem;
     }
   }
 }
