--- a/src/components/faq/faq.scss
+++ b/src/components/faq/faq.scss
@@ -1,13 +1,40 @@
 @import "../../global.scss";
 
 #faq{
-h1{
-  padding-top: calc(45px + 2rem);
-  text-align: center;
-}
-@include mobile{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   h1{
     padding-top: calc(45px + 1rem);
+    text-align: center;
   }
-}
+  .faq__para-container{
+    width: min(800px, 83%);
+    background-color: $primary;
+    color: $secondary;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 16px;
+    padding: 1rem 2rem;
+    border-radius: 20px;
+    margin-top: 1.5rem;
+    margin-bottom: 0.3rem;
+    max-height: 90vh;
+    overflow-y: scroll;
+    scrollbar-width:none;
+    p{
+      margin-bottom: 3rem;
+    }
+  }
+  @include mobile{
+    h1{
+      padding: 0.2rem 0.5rem 0 0.5rem;
+      font-size: 1.7rem;
+    }
+    .faq__para-container{
+      margin-top: 0;
+      padding: 1rem ;
+      h2{
+        font-size: 1.3rem;
+      }
+    }
+  }
 }
