fond et couleurs

--- a/src/app.scss
+++ b/src/app.scss
@@ -2,13 +2,14 @@
 .app{
   height: 100vh;
   font-family: 'Roboto Mono', monospace;
-  background-image: url("../public/assets/nouveau-fond-2022.jpg");
+  background-image: url("../public/assets/4.jpg");
   background-repeat: no-repeat;
-  background-position: 15% 50.5%;
+  background-position: 30% 10.5%;
   background-attachment: fixed;
 background-size: cover;
   @include mobile{
-    background-image: url("../public/assets/nouveau-fond-2022-mobile.jpg");
+    background-image: url("../public/assets/4.jpg");
+    background-image: url("../public/assets/4.jpg");
   }
   .sections{
     width: 100%;
@@ -20,7 +21,12 @@ background-size: cover;
     scroll-snap-type: y proximity;
     scrollbar-width: none;// for firefox
     overflow-x: hidden;
-    color: $primary;
+    color: $complementary;
+    @include mobile{
+      h1{
+        color: $primary;
+      }
+    }
     &::-webkit-scrollbar{
       display:none;    }
 
