--- a/src/global.scss
+++ b/src/global.scss
@@ -1,7 +1,7 @@
 $primary: #ffffff;
 $secondary: #383534;
-$tertiary: #5f534a;
-$complementary:#24272e;
+$tertiary: #646464;
+$complementary: #2f2f2f;
 $mobilebreak:768px;
 $padbreak:1300px;
 
