--- a/src/components/menuItem/menuitem.scss
+++ b/src/components/menuItem/menuitem.scss
@@ -12,7 +12,10 @@
     min-width: 150px;
     position: relative;
 overflow: hidden;
-
+  &.btn{
+    background-color: rgba(255, 255, 255, 0.83);
+    border-color: $complementary;
+  }
 
     @include mobile{
       margin-bottom:1rem;
@@ -21,6 +24,7 @@ overflow: hidden;
 
     .menu__item-title{
       display: flex;
+      position: relative;
       width: 100%;
       justify-content: center;
 
@@ -36,7 +40,7 @@ overflow: hidden;
         align-items: center;
         font-size: 1.3rem;
         font-weight: lighter;
-        border: 1px solid $primary;
+        border: 1px solid $complementary;
         border-radius: 50%;
         height: 20px;
         width: 20px;
@@ -216,6 +220,7 @@ overflow: hidden;
         }
       }
     }
+
     &.active{
       background-color: $primary;
       color: $complementary;
@@ -223,10 +228,25 @@ overflow: hidden;
       overflow: unset;
       margin:3px;
       height: 35px;
+      &::after{
+        position: absolute;
+          content: '';
+          width:calc(100% - 1px);
+          height: 9px;
+          bottom: 0px;
+          left:1px;
+          background-color: $primary;
+          z-index: 10;
+      }
 
       @include mobile{
         border-radius: 20px;
         height: auto;
+        &::after{
+
+          background-color: transparent;
+
+        }
       }
 
       .menu__item-title{
@@ -236,15 +256,17 @@ overflow: hidden;
         }
       }
       ul{
-       transform:translateY(100%);
+       transform:translateY(97%);
         height: auto;
         top: unset;
         opacity: 1;
         width: min(500px,85vw);
-        left: -1px;
+        //left: -1px;
+        border: 1px solid $complementary;
         border-top-right-radius: 20px;
         padding: 1rem;
         //margin-top:2rem;
+        z-index: 10;
         &.menu-read, &.menu-fav{
           left: -103%;
           border-radius: 20px;
@@ -272,6 +294,9 @@ overflow: hidden;
 
           }
 
+        }
+        @include mobile{
+          border:none;
         }
       }
     }
