--- a/src/components/bottomBar/bottombar.scss
+++ b/src/components/bottomBar/bottombar.scss
@@ -12,7 +12,7 @@
   width: 100%;
   height: 45px;
   transition: 1s ease;
-  z-index: 4;
+  z-index: 14;
 
   .hamburger{
     display: none;
@@ -45,7 +45,9 @@
     }
   &.active{
     background-color: $complementary;
+    height: 100px;z-index: 14;
     .hamburger{
+transform: translateY(-90%);
       span{
         &:first-child{
           background-color:$primary;
