--- a/src/app.scss
+++ b/src/app.scss
@@ -1,29 +1,25 @@
 @import "./global.scss";
 .app{
-  height: 100vh;
   font-family: 'Roboto Mono', monospace;
-  background-image: url("../public/assets/4.jpg");
-  background-repeat: no-repeat;
-  background-position: 30% 10.5%;
-  background-attachment: fixed;
-background-size: cover;
-  @include mobile{
-    background-image: url("../public/assets/4.jpg");
-    background-image: url("../public/assets/4.jpg");
-  }
+
   .sections{
+
+    background-repeat: no-repeat;
+    background-position: 30% 10.5%;
+    background-attachment: fixed;
+    background-size: cover;
+    @include mobile{
+      background-image: url("../public/assets/4.jpg");
+
+    }
     width: 100%;
-    height: calc(100vh - 85px) ;
     background-color: transparent;
     position: relative;
     top: 40px;
-    scroll-behavior:smooth;
-    scroll-snap-type: y proximity;
-    scrollbar-width: none;// for firefox
     overflow-x: hidden;
     color: $complementary;
     h1{
-      text-shadow: 2px 2px  white;
+      text-shadow: -2px -2px  white;
     }
     @include mobile{
       h1{
@@ -32,14 +28,13 @@ background-size: cover;
       }
     }
     &::-webkit-scrollbar{
-      display:none;    }
+      //display:none;
+    }
 
 
     > *{
-      width: 100vw;
-      //height/: 100vh;
+      width: 100vw;;
       height: calc(100vh - 85px);
-      scroll-snap-align: start;
     }
 
   }
