--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -14,9 +14,17 @@ height: unset!important;
     justify-content: space-between;
     align-items: center;
     min-width: 45%;
+
     @include mobile{
       //min-width: 300px;
       width: max(300px,90%)
+    }
+    h2{
+      letter-spacing: 2px;
+      word-spacing: 0.5rem;
+      margin-bottom:5px;
+      font-family: 'Inconsolata', monospace;
+      text-shadow: -2px -2px white;
     }
     h1{
       letter-spacing: 2px;
