--- a/src/components/menuItem/menuitem.scss
+++ b/src/components/menuItem/menuitem.scss
@@ -22,19 +22,19 @@ overflow: hidden;
       margin-left:1rem ;
     }
 
-    .menu__item-title{
+    .menu__item-wrapper{
       display: flex;
       position: relative;
       width: 100%;
       justify-content: center;
 
-      a{
+      menu__item--title{
         color: inherit;
         text-decoration: none;
         width: calc(100% - 20px);
         text-align: center;
       }
-      .seeMore{
+      .menu__item--seeMore{
         display: flex;
         justify-content: center;
         align-items: center;
@@ -215,7 +215,7 @@ overflow: hidden;
           font-weight: bold;
           cursor: pointer;
         }
-        a{
+        .menu__item-title{
           color: inherit;
         }
       }
@@ -231,10 +231,10 @@ overflow: hidden;
       &::after{
         position: absolute;
           content: '';
-          width:calc(100% - 1px);
+          width:100%;
           height: 9px;
           bottom: 0px;
-          left:1px;
+          left:0;
           background-color: $primary;
           z-index: 10;
       }
@@ -249,8 +249,8 @@ overflow: hidden;
         }
       }
 
-      .menu__item-title{
-        .seeMore{
+      .menu__item-wrapper{
+        .menu__item--seeMore{
           border-color:$complementary;
           content:"-";
         }
@@ -261,11 +261,11 @@ overflow: hidden;
         top: unset;
         opacity: 1;
         width: min(500px,85vw);
-        //left: -1px;
+        left: -1px;
         border: 1px solid $complementary;
         border-top-right-radius: 20px;
         padding: 1rem;
-        //margin-top:2rem;
+
         z-index: 10;
         &.menu-read, &.menu-fav{
           left: -103%;
@@ -281,7 +281,7 @@ overflow: hidden;
           left: unset;
         }
         @include mobile{
-                   transform: unset;
+          transform: unset;
           height: auto;
           border-radius: 20px;
           width: inherit;
