--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -6,7 +6,7 @@
   color: $tertiary;
   position: fixed;
   top: 0;
-  z-index: 3;
+  z-index: 10;
   transition: all 1s ease;
   .wrapper {
     //padding: 10px 30px;
@@ -19,10 +19,12 @@
       display: flex;
       align-items: center;
 
+
        .heading-left__item{
           text-decoration: none;
          color: inherit;
          margin-left: 20px;
+         cursor: pointer;
 
          .icon {
            font-size: 30px;
@@ -46,6 +48,21 @@
         margin-right: 15px;
         font-size: 18px;
         cursor: pointer;
+        .nav__link-GT-input{
+          display: none;
+          position: absolute;
+          top: 45px;
+          padding: 5px;
+          background-color: white;
+          right: 5px;
+
+        }
+        //&.active{
+        //           .nav__link-GT-input{
+        //    display: flex;
+        //  }
+        //}
+
       }
     }
 
