post/find request successf on first render, issue with useMemo 'suppressed'

--- a/src/components/thinkTankItem/thinktankitem.scss
+++ b/src/components/thinkTankItem/thinktankitem.scss
@@ -56,7 +56,7 @@ position: relative;
     font-weight: bold;
     line-height: 24px;
     max-width: 85%;
-
+    word-break: break-word;
   }
   .thinktankItem__url{
     position: absolute;
