--- a/src/components/mainMenu/mainmenu.scss
+++ b/src/components/mainMenu/mainmenu.scss
@@ -43,7 +43,7 @@
     li{
       margin-bottom: 1rem;
       transition: all 0.3s ease;
-      p{
+      div{
         text-decoration: none;
         color:inherit;
         width: 100%;
