--- a/src/components/login/memberloginandregister.scss
+++ b/src/components/login/memberloginandregister.scss
@@ -7,7 +7,7 @@
     color: $complementary;
     opacity: 0.8;
     text-align: center;
- margin-bottom: 0.7rem;
+ margin-bottom: 1rem;
   }
   .message{
     &:hover{
@@ -46,6 +46,17 @@ padding: 1.5rem 1rem;
       color:$primary;
     }
   }
+  .login__forgoten-psw{
+    color: $tertiary;
+    cursor: pointer;
+    font-size: 0.8rem;
+    &:hover{
+      font-weight: 500;
+    }
+    span{
+      text-decoration: underline;
+    }
+  }
   .login__btn-submit{
     border: 1px solid #2f2f2f;
     margin: 1rem auto ;
@@ -63,10 +74,15 @@ padding: 1.5rem 1rem;
   .login__btn-switch{
     width: 80%;
     margin:0.2rem 0;
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.9)) ;   margin: auto;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.9)) ;   margin: auto;
     padding: 1rem ;
     text-align: center;
     border-radius: 0 0 10px 10px;
+    color: $secondary;
+    cursor: pointer;
   }
 }
 
+.d-none{
+  display: none;
+}
