--- a/src/components/bottomBar/bottombar.scss
+++ b/src/components/bottomBar/bottombar.scss
@@ -35,11 +35,13 @@
   }
     .bottombar__item{
       margin-right: 15px;
-      p{
+      cursor: pointer;
+      div{
         text-decoration: none;
         color: inherit;
         cursor:pointer;
       }
+
       @include mobile{
         display: none;
       }
