--- a/src/components/mainMenu/mainmenu.scss
+++ b/src/components/mainMenu/mainmenu.scss
@@ -24,7 +24,7 @@
     position: absolute;
     width:100%;
     top:0;
-    padding: 0.7rem;
+    padding: 01rem 0.7rem;
 
     .menu__icon{
       &:hover{
