--- a/src/components/login/memberloginandregister.scss
+++ b/src/components/login/memberloginandregister.scss
@@ -21,7 +21,7 @@
     margin-bottom: 1.5rem;
   }
 .login__input-wrapper{
-  width: min(400px, 90vw);
+  width: min(400px, 85vw);
   //height: min(300px, 90vh);
 padding: 1.5rem 1rem;
   box-shadow: 0 5px 16px rgba(0, 0, 0, 0.2);
@@ -34,6 +34,9 @@ padding: 1.5rem 1rem;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  @include mobile{
+   margin: 0 0.7rem;
+  }
   .login__input-container{
     display:flex;
     justify-content: center;
@@ -84,5 +87,5 @@ padding: 1.5rem 1rem;
 }
 
 .d-none{
-  display: none;
+  display: none!important;
 }
