--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -4,8 +4,9 @@
   width: 80px;
   height: 80px;
   position: absolute;
-  top:45%;
-  right: 45%;
+  top:50vh;
+  transform: translate(60%,-50%);
+  right: 50vw;
 }
 .lds-ring div {
   box-sizing: border-box;
