--- a/src/components/account/account.scss
+++ b/src/components/account/account.scss
@@ -4,16 +4,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow:hidden;
+  justify-content: center;
   h1{
     padding-top: calc(45px + 0.1rem);
     text-align: center;
   }
   .account__para-container{
-    width: min(900px, 95%);
+    width: min(1200px, 95%);
     background-color: $primary;
     color: $secondary;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 16px;
-    padding: 1rem 2rem;
+    padding: 0;
     border-radius: 20px;
     margin-top: 1.5rem;
     margin-bottom: 0.3rem;
@@ -21,13 +23,95 @@
     overflow-y: scroll;
     scrollbar-width:none;
     display: flex;
+    min-height: 80vh;
     p{
       margin-bottom: 3rem;
       br{
         margin-bottom: 10px;
       }
     }
+    .account__menu-bar{
+      width: 30%;
+      //background-color: grey;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      padding: 1rem;
+      box-shadow: 5px 5px 5px rgba(128, 128, 128, 0.36);
+      background-color: $complementary;
+      color: $primary;
+      .account__menubar-avatar-wrapper{
+
+        display: flex;
+
+        justify-content: flex-start;
+        align-items: flex-start;
+        padding:1rem;
+        border-radius: 20px;
+        width: 80%;
+        margin-top:1rem;
+
+        svg{
+          color: $complementary;
+          //border:1px solid $tertiary;
+          background-color: $primary;
+          border-radius: 50%;
+          padding:1rem;
+          margin-top:0.7rem;
+        }
+        .account__pseudo{
+         letter-spacing: 1px; padding:0.7rem;
+font-weight: 300;
+          margin: auto 0.1rem;
+          span{
+            font-weight: bolder;
+          }
+        }
+
+      }
+      button{
+          width: 110px;
+          color: $primary;
+          margin:0.1rem 0 1rem;
+          border:1px solid $primary;
+          cursor:pointer;
+          opacity: 0.7;
+      padding-left: 1rem;
+      margin-left:1rem;
+        transition:font-weight 50ms ease-in-out;
+        &:hover{
+          font-weight: bolder;
+        background-color: rgba(211, 211, 211, 0.05);
+        }
+      }
+      .account__menubar-menulist{
+        margin-top: 1rem;
+        width: 90%;
+        padding-left: 1rem;
+        opacity:90%;
+        ul{
+          list-style: none;
+          padding: 0;
+          border-top:1px solid $primary;
+          li{
+            display: flex;
+            align-items: center;
+            height:3rem;
+            padding-left: 0.5rem;
+            transition:font-weight 50ms ease-in-out;
+            border-bottom:1px solid $primary;
+            svg{margin-right: 0.5rem}
+            &:hover{
+              font-weight: bold;
+              background-color: rgba(211, 211, 211, 0.05);
+              cursor:pointer
+            }
+          }
+        }
+      }
+    }
   }
+  .account__content-display{width: 66%;box-sizing: border-box}
   @include mobile{
     h1{
       padding: 0.2rem 0.5rem 0 0.5rem;
