--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -3,7 +3,7 @@
   background-color: $primary ;
   height: 40px;
   width: 100%;
-  color: $tertiary;
+  color: $secondary;
   position: fixed;
   top: 0;
   z-index: 10;
