--- a/src/components/account/accountcontent.scss
+++ b/src/components/account/accountcontent.scss
@@ -3,7 +3,13 @@
 .account-content__wrapper{
   width: 100%;margin: 1rem 0;
   padding:1rem;
-  box-sizing: border-box;;
+  box-sizing: border-box;
+  .account__form-message{
+    margin-bottom: 1rem;
+    color: $delete;
+    font-weight: bold;
+    //text-decoration: underline;
+  }
   .account__message{
     position: absolute;
     top: 36px;
@@ -39,6 +45,11 @@ align-items: center;
         flex-basis: 1/3;
         width: 33%;
         margin-right: 1rem;
+        display: flex;
+        align-items: center;
+        svg{
+          margin-right: 0.5rem;
+        }
 
       }
       .account-content__value{
@@ -70,7 +81,7 @@ align-items: center;
           }
           &:hover{
             font-weight: bold;
-            background-color: $tertiary;
+            background-color: $shadow;
             color: $primary;
           }
         }
