--- a/src/components/account/accountcontent.scss
+++ b/src/components/account/accountcontent.scss
@@ -4,6 +4,13 @@
   width: 100%;margin: 1rem 0;
   padding:1rem;
   box-sizing: border-box;
+  .mobileView{
+    display:none;
+    @include mobile{
+      display: flex;
+      cursor: pointer;
+    }
+  }
   .account__form-message{
     margin-bottom: 1rem;
     color: $delete;
@@ -31,6 +38,9 @@
 align-items: center;
       width: 100%;
       margin: 1rem 0;
+      @include mobile{
+        flex-direction: column;
+      }
 
       &.bordered{
         border-bottom:1px solid $tertiary;
@@ -47,7 +57,11 @@ align-items: center;
         margin-right: 1rem;
         display: flex;
         align-items: center;
-        svg{
+
+        @include mobile{
+          //overflow: scroll;
+          width: 100%;
+        }        svg{
           margin-right: 0.5rem;
         }
 
@@ -56,17 +70,32 @@ align-items: center;
         flex-basis: 1/3;
         width: 33%;
         font-weight: 200;
+
+        @include mobile{
+          //overflow: scroll;
+          width: 100%;
+          padding-top: 0.3rem;
+          padding-bottom:0.5rem
+        }
       }
       .account-content__buttons{
         margin-left:auto;
         flex-basis: fit-content;
         display: flex;
+        @include mobile{
+          margin-right: auto;
+          margin-left: 0;
+          padding-top:0.5rem;
+        }
         .btn{
 
           margin-right: 1rem;
           padding:0.5rem;
           cursor:pointer;
           transition: all 100ms ease-in-out;
+          @include mobile{
+            font-size: 0.8rem;
+          }
           &.account-content__buttons-btn-create{
             color:$validate;
             border:1px solid $validate;
