--- a/src/components/account/account.scss
+++ b/src/components/account/account.scss
@@ -41,6 +41,7 @@
       background-color: $complementary;
       color: $primary;
       border-radius: 20px 0 0 20px;
+      .account__menu-bar-home{display: none;}
       @include mobile{
         width: 0;
         transition: all 50ms ease-in-out;
@@ -49,12 +50,18 @@
         padding:0;
         overflow: hidden;
         opacity: 0;
-        .bckHome{
+        .account__menu-bar-home{
           display: flex;
-          top: 55px;
-          height: 1.3rem;
-          width: 1.3rem;
-          right: 19px;
+          position:absolute;
+background-color: $tertiary;
+          top: 25px;
+          height: 1.9rem;
+          width: 1.9rem;
+          right: 25px;
+          border-radius:50%;
+          padding: 0.2rem;
+          justify-content: center;align-items: center;
+cursor: pointer;
         }
         &.mobileView{
           width: 100%;
