--- a/src/components/login/memberloginandregister.scss
+++ b/src/components/login/memberloginandregister.scss
@@ -56,6 +56,9 @@ padding: 1.5rem 1rem;
     &:hover{
       font-weight: 500;
     }
+    &:disabled{
+      cursor: not-allowed;
+    }
     span{
       text-decoration: underline;
     }
@@ -67,6 +70,11 @@ padding: 1.5rem 1rem;
     cursor: pointer;
     font-size: 1.2rem;
     transition: background-color 0.7s ease;
+    min-width: 90px;
+    min-height: 40px;
+    &:disabled{
+      cursor: not-allowed;
+    }
     &:hover{
       background-color: $complementary;
       color: $primary;
@@ -88,6 +96,9 @@ padding: 1.5rem 1rem;
     border-radius: 0 0 10px 10px;
     color: $secondary;
     cursor: pointer;
+    &:disabled{
+      cursor: not-allowed;
+    }
   }
 }
 
