--- a/src/components/autoCSearchBar/autocsearchbar.scss
+++ b/src/components/autoCSearchBar/autocsearchbar.scss
@@ -1,7 +1,7 @@
 @import "../../global.scss";
 .message{
   color: #cc623a;
-  height: 20px;
+  //height: 20px;
   margin-bottom: 10px;
 }
 .tag-container{
