--- a/src/components/account/account.scss
+++ b/src/components/account/account.scss
@@ -25,7 +25,7 @@
     display: flex;
     min-height: 80vh;
     p{
-      margin-bottom: 3rem;
+      //margin-bottom: 3rem;
       br{
         margin-bottom: 10px;
       }
