--- a/src/components/account/accountContent/Post/post.scss
+++ b/src/components/account/accountContent/Post/post.scss
@@ -15,6 +15,8 @@
 }
 .account-content__mobileView{
   display: none!important;
+  margin-left: 1rem;
+  cursor: pointer;
   @include mobile{
     display: flex !important;
   }
