--- a/src/components/account/accountContent/accountcontent.scss
+++ b/src/components/account/accountContent/accountcontent.scss
@@ -27,6 +27,7 @@
   .account__message--delete{
     position: absolute;
     top: 50%;
+    right: 50%;
     background-color: white;
     height: 10rem;
     width: 15rem;
